[package]
name = "hanabi-base"
authors = ["Ragnar Groot Koerkamp"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
serde = { version = "1.0.152", features = ["derive"] }
strum = "0.24.1"
strum_macros = "0.24.3"
# TODO: Make this a binary-only dep.
text_io = "0.1.9"
