[package]
name = "turnbased-game-server"
version = "0.1.0"
edition = "2021"
default-run = "server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-channel = "0.3.25"
futures-util = "0.3.25"
hanabi-base = { path = "../hanabi-base" }
serde = "1.0.152"
serde_json = "1.0.91"
tokio = { version = "1.24.1", features = ["rt", "macros", "rt-multi-thread", "io-std"] }
tokio-stream = "0.1.11"
tokio-tungstenite = "0.18.0"
tokio-util = { version = "0.7.4", features = ["codec", "io"] }
